fix: resolver overflow de nome e descricao do perfil

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,13 +23,23 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  max-height: 39px;
+  max-height: 45px;
   margin: 25px 25px 0 0;
+
+  max-width: 570px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .profile__info-description {
   grid-area: description;
   margin: 0;
+
+  max-width: 570px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .profile__info-button {
@@ -116,8 +126,8 @@
 
   .profile__info-description {
     justify-self: center;
-    padding: 14px 0 0 18px;
     font-size: 14px;
+    max-width: 282px;
   }
 
   .profile__add-button {
